Updated gitignore results

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ dmypy.json
 results*
 TransferLearning_vs_Semisupervised/ProteinBERT/model_/*
 TransferLearning_vs_Semisupervised/ProtTrans
+TransferLearning_vs_Semisupervised/results*
